--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,8 +4,8 @@
 
 @charset "utf-8";
 
-@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
-@import "minimal-mistakes"; // main partials
+@import "minimal-mistakes/skins/contrast";
+@import "minimal-mistakes"; main partials
 
 body {
   // font-family: "Roboto", sans-serif; // Primary font
