--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -59,6 +59,9 @@ body {
 
 /* Responsive adjustments */
 @media (max-width: 1200px) {
+    .page{
+    padding-right: 20px !important;
+}
     .page__inner-wrap,
     .page__content {
         max-width: 85% !important;
@@ -71,6 +74,9 @@ body {
 }
 
 @media (max-width: 1024px) {
+    .page{
+    padding-right: 20px !important;
+}
     .page__inner-wrap,
     .page__content {
         max-width: 90% !important;
@@ -83,6 +89,9 @@ body {
 }
 
 @media (max-width: 800px) {
+    .page{
+    padding-right: 20px !important;
+}
     .page__inner-wrap,
     .page__content {
         max-width: 95% !important;
